.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <description>Percentage of Document Submissions Approved.</description>
    <formula>of_Approved_Submissions__c /  Total_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Document Submissions Approved.</inlineHelpText>
    <label>% Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>