.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Closing_Report__c.field-meta.xml
<CustomField>
    <fullName>Closing_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement/Closing Report</label>
    <referenceTo>TR1__Closing_Report__c</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>