.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>