.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Document_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Assigned_Date__c</fullName>
    <label>Document Assigned Date</label>
    <type>DateTime</type>
</CustomField>