.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Document_Pack_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Pack_Name__c</fullName>
    <formula>b3o__Document_Pack__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Pack Name</label>
    <type>Text</type>
</CustomField>