.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Document_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Review_Status__c</fullName>
    <description>This field checks the overall progression status of related document submissions.</description>
    <formula>IF(Total_of_Submissions__c = 0, &apos;No Submission&apos;,
   IF(Approved__c = 1, &apos;Finalised - Approved&apos;, 
      IF(TEXT(b3o__Contact__r.TR1__Candidate_Status__c) = &apos;Inactive&apos;, &apos;Hold - Inactive Candidate&apos;,
         IF( AND(Total_of_Submissions__c - of_Rejected_Submissions__c !=  Total_Assigned__c,  of_Submissions_Pending_Review__c =0), &apos;Pending Submission/Update&apos;, &apos;Pending Review&apos; 
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field checks the overall progression status of related document submissions.</inlineHelpText>
    <label>Document Review Status</label>
    <type>Text</type>
</CustomField>