.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Job_Application_V2__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_V2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application V2</label>
    <referenceTo>TR1__Application_V2__c</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>