.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Last_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Date__c</fullName>
    <description>The last date when our recruitment consultant approved.
If the review status is &apos;Finalised - Approved&apos;, this field indicates the date when this document pack has been finalised.</description>
    <inlineHelpText>The last date when our recruitment consultant approved.
If the review status is &apos;Finalised - Approved&apos;, this field indicates the date when this document pack has been finalised.</inlineHelpText>
    <label>Last Approval Date</label>
    <type>Date</type>
</CustomField>