.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/of_Approved_Submissions__c.field-meta.xml
<CustomField>
    <fullName>of_Approved_Submissions__c</fullName>
    <description>The number of Approved Document Submissions linked to this Document Assignment.</description>
    <inlineHelpText>The number of Approved Document Submissions linked to this Document Assignment.</inlineHelpText>
    <label># of Approved Submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>