.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/of_Submissions_Pending_Review__c.field-meta.xml
<CustomField>
    <fullName>of_Submissions_Pending_Review__c</fullName>
    <description>The number of Document Submissions in &apos;Submitted&apos; status that are linked to this Document Assignment.</description>
    <inlineHelpText>The number of Document Submissions in &apos;Submitted&apos; status that are linked to this Document Assignment.</inlineHelpText>
    <label># of Submissions Pending Review</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>