.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Outstanding_Items__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Items__c</fullName>
    <label>Outstanding Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>