.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Pending_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Review__c</fullName>
    <description>Percentage of Document Submissions Pending Review.</description>
    <formula>of_Submissions_Pending_Review__c /  Total_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Document Submissions Pending Review.</inlineHelpText>
    <label>% Pending Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>