.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <description>Percentage of Document Submissions Rejected.</description>
    <formula>of_Rejected_Submissions__c /  Total_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Document Submissions Rejected.</inlineHelpText>
    <label>% Rejected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>