.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <label>Reminder Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Reminder Sent</fullName>
            </value>
            <value>
                <fullName>2nd Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Final Reminder Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>