.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Send_Single_Document_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Single_Document_Request_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Single Document Request Email</label>
    <type>Checkbox</type>
</CustomField>