.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Single_Document_Request_Notification__c.field-meta.xml
<CustomField>
    <fullName>Single_Document_Request_Notification__c</fullName>
    <label>Single Document Request Notification</label>
    <type>TextArea</type>
</CustomField>