.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Total_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Total_Assigned__c</fullName>
    <description>The number of documents assigned to the candidate with this Document Pack.</description>
    <formula>b3o__Document_Pack__r.of_Documents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of documents assigned to the candidate with this Document Pack.</inlineHelpText>
    <label>Total # Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>