.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Total_of_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Submissions__c</fullName>
    <description>The number of Document Submissions linked to this Document Assignment.</description>
    <inlineHelpText>The number of Document Submissions linked to this Document Assignment.</inlineHelpText>
    <label>Total # of Submissions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>