.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Assignment__c/fields/Travel_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Travel_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Requirement</label>
    <referenceTo>Travel_Requirement__c</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>